--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,18 +9,39 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
+
+      # === Frontend Setup ===
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install frontend dependencies
+        run: |
+          cd frontend
+          npm install
+
+      - name: Run frontend tests
+        run: |
+          cd frontend
+          npm test -- --watchAll=false
+
+      # === Backend Setup ===
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: Install dependencies
+
+      - name: Install backend dependencies
         run: |
           cd backend
           pip install -r requirements.txt
-      - name: Run tests
+
+      - name: Run backend tests
         run: |
           cd backend
-          # Add pytest command here later; for now, echo "Tests passed" as placeholder
-          echo "Tests passed"
+          # Placeholder until backend tests are added
+          echo "Backend tests will go here"
