--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,6 +41,9 @@ jobs:
           pip install -r requirements.txt
           pip install pytest
 
+      - name: Set env vars
+        run: echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> $GITHUB_ENV
+
       - name: Run backend tests
         run: |
           cd backend
