--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -46,5 +46,4 @@ jobs:
 
       - name: Run backend tests
         run: |
-          cd backend
-          python -m pytest
+          python -m pytest backend/
